fix run analysis white space

--- a/src/css/analysisPanel.styl
+++ b/src/css/analysisPanel.styl
@@ -130,7 +130,7 @@
     top 2px
 
 .analysis-results__select-form
-  height: calc(100% - 225px);
+  height: calc(100% - 178px);
   overflow-y auto
   overflow-x hidden
   .analysis-results__select-form-item-container
